static mapper instead of dependency mapper